# Escritorio_Remoto_ARCH

Proyecto_2S2025/: README.md
Proyecto_2S2025/backend/: auth_logic.c  screen_capture.hpp  syscall_defs.hpp
Proyecto_2S2025/backend/server_build/: cmake_install.cmake
Proyecto_2S2025/frontend/src/: App.css  App.jsx
Proyecto_2S2025/frontend/src/components/Header/: Header.jsx  Header.module.css
Proyecto_2S2025/frontend/src/components/Login/: Login.module.css
Proyecto_2S2025/frontend/src/pages/: DesktopPage.module.css
Proyecto_2S2025/frontend/src/services/: authService.js
Proyecto_2S2025/frontend/src/utils/: keyMapper.js
Proyecto_2S2025/kernel/arch/x86/entry/syscalls/: syscall_64.tbl
Proyecto_2S2025/kernel/drivers/input/: Makefile
Proyecto_2S2025/kernel/drivers/input/usac/: Kconfig  Makefile  usac_mouse.c
Proyecto_2S2025/kernel/drivers/misc/usac/: Kconfig  Makefile  syscalls_usac.c
backend/: CMakeLists.txt  api_server.cpp  auth_logic.h  jpeg_converter.cpp  jpeg_converter.hpp  screen_capture.cpp
backend/server_build/: CMakeCache.txt  Makefile  auth_server
frontend/src/components/Login/: Login.jsx
frontend/src/components/RemoteScreen/: RemoteScreen.jsx  RemoteScreen.module.css
frontend/src/pages/: DesktopPage.jsx  LoginPage.jsx
frontend/src/services/: inputService.js  statsService.js
kernel/drivers/input/: Kconfig
kernel/drivers/input/usac/: syscall_usac.c  usac_resources.c
kernel/drivers/misc/: Kconfig  Makefile
